# adagraph

./: Cargo.toml  README.md
adagraph/: Cargo.toml
adagraph-adjacency-graph/: Cargo.toml
adagraph-adjacency-graph/src/: lib.rs
adagraph-edge-addition-separators/: Cargo.toml
adagraph-edge-addition-separators/src/: disjoint_set.rs  lib.rs
adagraph-induced-subgraph/: Cargo.toml
adagraph-induced-subgraph/src/: lib.rs
adagraph-nauty/: Cargo.toml
adagraph-nauty/src/: bit_set.rs  lib.rs  trie.rs
adagraph-separators/: Cargo.toml
adagraph-separators/src/: lib.rs  main.rs
adagraph-serde/: Cargo.toml
adagraph-serde/src/: lib.rs
adagraph-takadas-recurrance/: Cargo.toml
adagraph-takadas-recurrance/src/: lib.rs
adagraph-triangulation/: Cargo.toml
adagraph-triangulation/src/: lib.rs
adagraph/src/: lib.rs  prelude.rs
adagraph/src/algos/: mod.rs
