[package]
name = "adagraph-nauty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adagraph = { path = "../adagraph" }
adagraph-induced-subgraph = { path = "../adagraph-induced-subgraph/" }
num = "0.4.0"
