[package]
name = "adagraph-serde"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adagraph = { path = "../adagraph" }
adagraph-nauty = { path = "../adagraph-nauty/" }
lazy_static = "1.4.0"
regex = "1.5.4"
serde = {version = "1.0.130", features=["derive"]}
