[package]
name = "adagraph-takadas-recurrance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adagraph = { path = "../adagraph" }
adagraph-induced-subgraph = { path = "../adagraph-induced-subgraph" }

